--- a/ureport/static/stylesheets/ureporters.css
+++ b/ureport/static/stylesheets/ureporters.css
@@ -1,62 +1,9 @@
-.filterform{
-    display: inline;
-	float: left;
-	margin-left: 5px;
-	margin-right: 5px;
-}
-#div_filter_0{
-    margin-left:0px;
-}
-#div_filter_0 input{
-    width:130px;
-}
-
-#div_filter_0 label{
-  
-}
-#div_filter_1{
-
-    margin-left:250px;
-}
-
-#div_filter_2{
-   margin-left:-50px;
-    width:150px;
-}
-#div_filter_3{
-    margin-left:600px;
-
-}
-#div_filter_4 input{
-    width:100px;
-}
-
-#div_filter_4{
-margin-top:-60px;
-    margin-left:738px;
-}
-#div_action_3{
-    position: relative;
-    height:auto;
-    margin-bottom:2px;
-    display: block;
-    margin-left: 500px;
-
-}
-#filters{
-    min-height:100px;
-}
-
-#actions
-{
-    min-height:250px;
-}
-.export_link{
-   clear:both;
-}
-.export_link{
-    position:absolute;
-    margin-top: 200px;
-    z-index: 999;
-    left:200px;
+.filterform label {
+  display: block;
+  float: none;
+  width: auto;
+  font-weight: bold;
+  text-align: left;
+  line-height: 20px;
+  padding-top: 0;
 }
