--- a/ureport/templates/ureport/mp_dashboard.html
+++ b/ureport/templates/ureport/mp_dashboard.html
@@ -2,7 +2,10 @@
 
 {% block javascripts %}
 {{ block.super }}
+    <link type="text/css" rel="stylesheet" href="{{ MEDIA_URL }}ureport/stylesheets/ureport_extras.css"/>
   <script src="{{MEDIA_URL}}ureport/javascripts/mp_dashboard.js" type="text/javascript"></script>
+  <script src="{{MEDIA_URL}}ureport/javascripts/ureport_extras.js" type="text/javascript"></script>
+
 {% endblock %}
 
 {% block content %}
@@ -30,12 +33,13 @@
                             </td>
                         </tr>
                     {% endfor %}
+
                     </table>
                    
                 {% endfor %}
 
-                </br>
-            <table >
+
+            <table class="inline">
                 <tr>
                     
                     <td><a  class="btn-primary btn btn-large" href="javascript:void(0)" onclick="filter(this,'./?filter=true')"> Update</a></td>
