--- a/ureport/static/stylesheets/base.css
+++ b/ureport/static/stylesheets/base.css
@@ -827,3 +827,8 @@ fieldset{
     background-repeat:no-repeat;
     background-position: center center;
 }
+.ajax_loading {
+    background-image:url("../images/ajax-loader.gif");
+    background-repeat:no-repeat;
+    background-position: center center;
+}
