--- a/ureport/templates/layout.html
+++ b/ureport/templates/layout.html
@@ -20,6 +20,8 @@
         <script type="text/javascript" src="{{ MEDIA_URL }}rapidsms/javascripts/collapse.js"></script>
         <script type="text/javascript" src="{{ MEDIA_URL }}generic/javascripts/jquery-ui-1.8.11.custom.min.js"></script>
         <script type="text/javascript" src="{{ MEDIA_URL }}ureport/javascripts/ureport.js"></script>
+        <script type="text/javascript" src="{{ MEDIA_URL }}generic/javascripts/generic.js"></script>
+
          <script type="text/javascript">
 
               var _gaq = _gaq || [];
