--- a/ureport/templates/layout.html
+++ b/ureport/templates/layout.html
@@ -56,7 +56,7 @@
 	                   <li><a href="{% url messagelog %}">MESSAGE LOG</a></li>
 	                   <li><a href="{% url ureport-contact %}">UREPORTERS</a></li>
 	                   <li><a href="{% url flaggedmessages %}">FLAGGED MESSAGES</a></li>
-                         <li><a href="{% url mp_dashboard %}">MP DASHBOARD</a></li>
+                         <li><a href="{% url mp_dashboard %}">MP BARAZA</a></li>
 	                {% else %}
 	                   <li><a href="/accounts/login">LOGIN</a></li>
 	                {% endif %}
