--- a/ureport/templates/ureport/mp_dashboard.html
+++ b/ureport/templates/ureport/mp_dashboard.html
@@ -10,7 +10,7 @@
 
     $(document).ready(function(){
    $.PeriodicalUpdater({
-      url : "./?ajax=true"
+      url : "./?ajax=true&time="
    },
    function(data){
        if (data =="success")
