--- a/ureport/templates/ureport/partials/polls/response_row.html
+++ b/ureport/templates/ureport/partials/polls/response_row.html
@@ -17,7 +17,7 @@
     {% endif %}
 {% endblock %}
 {% block actions_cell %}
-    {%if  perms.ureport.view_numbers %}
+    {%if  perms.contact.view_numbers %}
     <td class="response_options_col" >
     {% block actions_content %}
       <div class="buttons">
