--- a/ureport/templates/ureport/signup.html
+++ b/ureport/templates/ureport/signup.html
@@ -1,8 +1,8 @@
 {% extends "ureport_layout.html" %}
 
-{% block javascripts %}
+{% block extra_js %}
     
-    {{ block.super }}
+  
      <link type="text/css" rel="stylesheet" href="{{ MEDIA_URL }}ureport/stylesheets/jquery-ui.css"/>
  <script type="text/javascript" src="{{ MEDIA_URL }}ureport/javascripts/jquery-ui.js"></script>
 
