--- a/ureport/templates/layout.html
+++ b/ureport/templates/layout.html
@@ -6,21 +6,23 @@
     <title>Ureport - {% block page_title %}Voice Matters{% endblock %}</title>
 
     <link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}ureport/stylesheets/base.css">
+ 
  <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->    
+    <![endif]-->
+
     {% block stylesheets %}
          <link type="text/css" rel="stylesheet" href="{{ MEDIA_URL }}rapidsms/stylesheets/modules.css" />
 
     {% endblock %}
 
-    {% block javascripts %}
-        <script type="text/javascript" src="{{ MEDIA_URL }}rapidsms/javascripts/jquery-1.3.2.min.js"></script>
+
+        <script type="text/javascript" src="{{ MEDIA_URL }}ureport/javascripts/jquery.js"></script>
         <script type="text/javascript" src="{{ MEDIA_URL }}rapidsms/javascripts/collapse.js"></script>
         <script type="text/javascript" src="{{ MEDIA_URL }}generic/javascripts/jquery-ui-1.8.11.custom.min.js"></script>
         <script type="text/javascript" src="{{ MEDIA_URL }}ureport/javascripts/ureport.js"></script>
-        
+
          <script type="text/javascript">
 
               var _gaq = _gaq || [];
@@ -34,10 +36,14 @@
               })();
 
             </script>
+ {% block javascripts %}
     {% endblock %}
+{% block extra_js %}
+
+{% endblock %}
 </head>
 <body>
-    <div class="container container-fluid" style="background-color:#ffffff;">
+    <div class="container" style="background-color:#ffffff;">
         <div class="banner">
             <a href="/">
             <span class="brand">UReport</span>
@@ -57,6 +63,7 @@
 	                   <li><a href="{% url ureport-contact %}">UREPORTERS</a></li>
 	                   <li><a href="{% url flaggedmessages %}">FLAGGED MESSAGES</a></li>
                          <li><a href="{% url mp_dashboard %}">MP BARAZA</a></li>
+                        <li><a href="{% url classifier %}">MESSAGE CLASSIFICATION</a></li>
 	                {% else %}
 	                   <li><a href="/accounts/login">LOGIN</a></li>
 	                {% endif %}
@@ -92,6 +99,7 @@
 	                   <li><a href="{% url ureport-contact %}">UREPORTERS</a></li>
 	                   <li><a href="{% url flaggedmessages %}">FLAGGED MESSAGES</a></li>
                         <li><a href="{% url mp_dashboard %}">MP BARAZA</a></li>
+                         <li><a href="{% url classifier %}">MESSAGE CLASSIFICATION</a></li>
 	                {% else %}
 	                   <li><a href="/accounts/login">LOGIN</a></li>
 	                {% endif %}
