--- a/ureport/templates/ureport/bulk_contact_upload.html
+++ b/ureport/templates/ureport/bulk_contact_upload.html
@@ -6,10 +6,9 @@
     {{ block.super }}
     <link type="text/css" rel="stylesheet" href="{{MEDIA_URL}}ureport/stylesheets/jquery-ui.css"/>
 {% endblock %}
-{% block javascripts %}
-    {{ block.super }}
+{% block extra_js %}
     <script src="{{MEDIA_URL}}ureport/javascripts/jquery-ui.js" type="text/javascript"></script>
-    <script src="{{MEDIA_URL}}ureport/javascripts/ureport.js" type="text/javascript"></script>
+
 {% endblock %}
 {% block content %}
 	<div class="module">
