--- a/ureport/templates/ureport/contact_message_base.html
+++ b/ureport/templates/ureport/contact_message_base.html
@@ -10,9 +10,8 @@
     <link type="text/css" rel="stylesheet" href="{{ MEDIA_URL }}contact/stylesheets/messages.css" />
     <link type="text/css" rel="stylesheet" href="{{ MEDIA_URL }}ureport/stylesheets/message_log.css" />
 {% endblock %}
-{% block javascripts %}
-    {{ block.super }}
-    <script src="{{MEDIA_URL}}contact/javascripts/messages.js" type="text/javascript"></script>
+{% block extra_js %}
+
 {% endblock %}
 {% block filters %}
 
