--- a/ureport/templates/ureport/contacts_base.html
+++ b/ureport/templates/ureport/contacts_base.html
@@ -8,9 +8,8 @@
     <link type="text/css" rel="stylesheet" href="{{ MEDIA_URL }}rapidsms/stylesheets/modules.css" />
     <link type="text/css" rel="stylesheet" href="{{ MEDIA_URL }}rapidsms/stylesheets/icons.css" />
 {% endblock %}
-{% block javascripts %}
-    {{ block.super }}
-    <script src="{{MEDIA_URL}}ureport/javascripts/ureport.js" type="text/javascript"></script>
+{% block extra_js %}
+
     <script src="{{MEDIA_URL}}ureport/javascripts/jquery-ui.js" type="text/javascript"></script>    
 {% endblock %}
 
