--- a/ureport/templates/ureport/dashboard.html
+++ b/ureport/templates/ureport/dashboard.html
@@ -10,7 +10,7 @@
     <link type="text/css" rel="stylesheet" href="{{MEDIA_URL}}generic/stylesheets/generic.css"/>
     <link type="text/css" rel="stylesheet" href="{{ MEDIA_URL }}poll/stylesheets/style.css" />
 {% endblock %}
-{% block javascripts %}
+{% block extra_js %}
     <script src="{{MEDIA_URL}}ureport/javascripts/highcharts.js" type="text/javascript"></script>
     <script src="{{MEDIA_URL}}poll/javascripts/polls.js" type="text/javascript"></script>
     <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
