--- a/ureport/templates/ureport/mp_dashboard.html
+++ b/ureport/templates/ureport/mp_dashboard.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
-{% block javascripts %}
-{{ block.super }}
+{% block extra_js %}
+
     <link type="text/css" rel="stylesheet" href="{{ MEDIA_URL }}ureport/stylesheets/ureport_extras.css"/>
   <script src="{{MEDIA_URL}}ureport/javascripts/mp_dashboard.js" type="text/javascript"></script>
   <script src="{{MEDIA_URL}}ureport/javascripts/ureport_extras.js" type="text/javascript"></script>
