--- a/ureport/templates/ureport/poll_admin_base.html
+++ b/ureport/templates/ureport/poll_admin_base.html
@@ -10,8 +10,8 @@
     <link type="text/css" rel="stylesheet" href="{{ MEDIA_URL }}poll/stylesheets/style.css" />
 {% endblock %}
 
-{% block javascripts %}
-    {{ block.super }}
+{% block extra_js %}
+    
     <script src="{{MEDIA_URL}}poll/javascripts/polls.js" type="text/javascript"></script>
 {% endblock %}
 
