--- a/ureport/templates/ureport/responses_base.html
+++ b/ureport/templates/ureport/responses_base.html
@@ -9,8 +9,6 @@
     <link type="text/css" rel="stylesheet" href="{{ MEDIA_URL }}rapidsms/stylesheets/icons.css" />
      <link type="text/css" rel="stylesheet" href="{{ MEDIA_URL }}ureport/stylesheets/style.css" />
 {% endblock %}
-{% block javascripts %}
-    {{ block.super }}
-    <script src="{{MEDIA_URL}}ureport/javascripts/ureport.js" type="text/javascript"></script>
+{% block extra_js %}
     <script src="{{MEDIA_URL}}ureport/javascripts/jquery-ui.js" type="text/javascript"></script>
 {% endblock %}
