--- a/ureport/templates/ureport/responses_base.html
+++ b/ureport/templates/ureport/responses_base.html
@@ -4,6 +4,7 @@
 {% endblock %}
 {% block stylesheets %}
     <link type="text/css" rel="stylesheet" href="{{ MEDIA_URL }}ureport/stylesheets/ureport.css" />
+     <link type="text/css" rel="stylesheet" href="{{ MEDIA_URL }}ureport/stylesheets/ureporters.css" />
     <link type="text/css" rel="stylesheet" href="{{ MEDIA_URL }}rapidsms/stylesheets/splits.css" />
     <link type="text/css" rel="stylesheet" href="{{ MEDIA_URL }}rapidsms/stylesheets/modules.css" />
     <link type="text/css" rel="stylesheet" href="{{ MEDIA_URL }}rapidsms/stylesheets/icons.css" />
@@ -11,4 +12,6 @@
 {% endblock %}
 {% block extra_js %}
     <script src="{{MEDIA_URL}}ureport/javascripts/jquery-ui.js" type="text/javascript"></script>
+    <script type="text/javascript" src="{{ MEDIA_URL }}ureport/javascripts/tabs.js"></script>
 {% endblock %}
+
