--- a/ureport/templates/layout.html
+++ b/ureport/templates/layout.html
@@ -19,7 +19,7 @@
         <script type="text/javascript" src="{{ MEDIA_URL }}ureport/javascripts/jquery.js"></script>
         <script type="text/javascript" src="{{ MEDIA_URL }}rapidsms/javascripts/collapse.js"></script>
         <script type="text/javascript" src="{{ MEDIA_URL }}generic/javascripts/jquery-ui-1.8.11.custom.min.js"></script>
-        <script type="text/javascript" src="{{ MEDIA_URL }}ureport/javascripts/ureport.js"></script>
+        <script type="text/javascript" src="{{ MEDIA_URL }}ureport/javascripts/ureport.js?1"></script>
 
          <script type="text/javascript">
 
