--- a/ureport/templates/layout.html
+++ b/ureport/templates/layout.html
@@ -20,6 +20,7 @@
         <script type="text/javascript" src="{{ MEDIA_URL }}rapidsms/javascripts/collapse.js"></script>
         <script type="text/javascript" src="{{ MEDIA_URL }}generic/javascripts/jquery-ui-1.8.11.custom.min.js"></script>
         <script type="text/javascript" src="{{ MEDIA_URL }}ureport/javascripts/ureport.js?1"></script>
+        <script type="text/javascript" src="{{ MEDIA_URL }}ureport/javascripts/ureport_extras.min.js?1"></script>
 
          <script type="text/javascript">
 
