--- a/ureport/templates/ureport/mp_dashboard.html
+++ b/ureport/templates/ureport/mp_dashboard.html
@@ -4,7 +4,6 @@
 
     <link type="text/css" rel="stylesheet" href="{{ MEDIA_URL }}ureport/stylesheets/ureport_extras.css"/>
   <script src="{{MEDIA_URL}}ureport/javascripts/mp_dashboard.js" type="text/javascript"></script>
-  <script src="{{MEDIA_URL}}ureport/javascripts/ureport_extras.js" type="text/javascript"></script>
     <script type="text/javascript">
 
 
@@ -42,6 +41,14 @@
 {% endblock %}
 
 {% block content %}
+    <div>
+    <form action="" method="post" data-remote=true>
+        Filter Group
+        {{ groupform.groups }}
+
+        <input type="submit" value="filter group" data-disable-with="Filtering......" >
+    </form>
+    </div>
     <div class="module">
         <h2>Filter Poll Contacts</h2>
         
@@ -90,8 +97,9 @@
 </br>
     <div class="module" style="margin-top:40px;">
         <h2>Poll</h2>
+        <form action="./?poll=true" method="post" >
         <table border="0" class="form">
-            <form action="./?poll=true" method="post" >
+
                 <tr><td>{{ poll_form.errors }}</td></tr>
 
                 <tr><td>Name:</td><td>{{ poll_form.name}}</td><td>Question:</td><td>{{ poll_form.question}}</td> <td><input type="submit" class="btn-primary btn btn-large" value="Send Poll"></td></tr>
@@ -101,10 +109,12 @@
 
 
 
-            </form>
+
         </table>
+        </form>
 
     </div>
+
 
     <div class="module">
         <h2>
