--- a/ureport/templates/ureport/message_history_base.html
+++ b/ureport/templates/ureport/message_history_base.html
@@ -50,7 +50,7 @@ $('#div_action_0').find('a').html("Send Message");
         {% else %}
         {{ contact.language }}
          {% endif %}
-    </td></tr>
+    </td><td><a href="?download=True"</td></tr>
 </table>
 
     </div>
