--- a/ureport/templates/ureport/partials/viz/best_visualization.html
+++ b/ureport/templates/ureport/partials/viz/best_visualization.html
@@ -7,6 +7,11 @@ CURRENT POLL
 </span>
 <span class="poll-question">
 {{ poll.question }}
+
+
+
+    ({{ poll.responses.count }}  Responses)
+    
 </span>
 </h4>
 {% if tags %}
