--- a/ureport/templates/ureport/partials/viz/best_visualization.html
+++ b/ureport/templates/ureport/partials/viz/best_visualization.html
@@ -10,9 +10,10 @@ CURRENT POLL
 
 
 
-    ({{ poll.responses.count }}  Responses)
+
     
 </span>
+    <span style="color:#00638A;font-size:16px;">{{ poll.responses.count }}  Responses out of {{ poll.contacts.count }} Participants( {{ rate }}%)</span>
 </h4>
 {% if tags %}
 
