--- a/ureport/templates/ureport/mp_dashboard.html
+++ b/ureport/templates/ureport/mp_dashboard.html
@@ -20,7 +20,7 @@
         d=eval(data);
        $.each(d,function(k,v)
        {
-           foo="<tr><td>"+v.text+"</td><td>"+v.name+"</td><td>"+v.number+"</td><td>"+v.district+"</td><td>"+v.group+"</td></tr>";
+           foo="<tr><td>"+v.text+"</td><td>"+v.date+"</td><td>"+v.name+"</td><td>"+v.number+"</td><td>"+v.district+"</td><td>"+v.group+"</td></tr>";
 
             $("#mp_bd").prepend(foo);
 
