--- a/ureport/templates/ureport_layout.html
+++ b/ureport/templates/ureport_layout.html
@@ -10,10 +10,7 @@
     {% endblock %}
 
     {% block javascripts %}
-        <script type="text/javascript" src="{{ MEDIA_URL }}rapidsms/javascripts/jquery-1.3.2.min.js"></script>
-        <script type="text/javascript" src="{{ MEDIA_URL }}rapidsms/javascripts/collapse.js"></script>
-        <script type="text/javascript" src="{{ MEDIA_URL }}generic/javascripts/jquery-ui-1.8.11.custom.min.js"></script>
-        <script type="text/javascript" src="{{ MEDIA_URL }}ureport/javascripts/ureport.js?4"></script>
+
          <script type="text/javascript">
 
               var _gaq = _gaq || [];
@@ -121,5 +118,9 @@
 	        </div>
 	    </div>
     </div>
+ <script type="text/javascript" src="{{ MEDIA_URL }}rapidsms/javascripts/jquery-1.3.2.min.js"></script>
+        <script type="text/javascript" src="{{ MEDIA_URL }}rapidsms/javascripts/collapse.js"></script>
+        <script type="text/javascript" src="{{ MEDIA_URL }}generic/javascripts/jquery-ui-1.8.11.custom.min.js"></script>
+        <script type="text/javascript" src="{{ MEDIA_URL }}ureport/javascripts/ureport.min.js?4"></script>
 </body>
 </html>
