--- a/ureport/templates/ureport/partials/viz/piechart.html
+++ b/ureport/templates/ureport/partials/viz/piechart.html
@@ -2,5 +2,7 @@
 </div>
 <script src="{{MEDIA_URL}}ureport/javascripts/highcharts.js" type="text/javascript"></script>
 <script language="javascript">
+    $(document).ready({
     load_piechart('{{ poll.pk }}', 'pie_{{ poll.pk }}', '{% url poll.views.stats poll.pk %}');
+    });
 </script>
